# pages/api/repository.js
@@ -1,5 +1,7 @@
-import Mooring from "../../../models/Mooring";
-
+import Mooring from "../../models/Mooring";
+import Booking from "../../models/Booking";
+import User from "../../models/User";
+import Owner from "../../models/Owner";
 
 const getMooringsByLocation = async (lat, lng) => {
 
@@ -41,7 +43,40 @@ const getMooringsByLocationAndDates = async (lat, lng, from, to) => {
     return "lots of moorings";
 }
 
+const createBooking = async (bookingData) => {
+    // to be tested
+    try {
+        const booking = await Booking.create({ ...bookingData, created_date: new Date() });
+        return booking;
+    } catch (error) {
+        throw new Error(error)
+    }
+}
+
+const createUser = async (userDate) => {
+    // to be tested
+    try {
+        const user = await User.create({ ...userDate, created_date: new Date() });
+        return user;
+    } catch (error) {
+        throw new Error(error)
+    }
+}
+
+const createOwner = async (userDate) => {
+    // to be tested
+    try {
+        const owner = await Owner.create({ ...userDate, created_date: new Date() });
+        return owner;
+    } catch (error) {
+        throw new Error(error)
+    }
+}
+
 module.exports = {
     getMooringsByLocation,
-    getMooringsByLocationAndDates
+    getMooringsByLocationAndDates,
+    createBooking,
+    createUser,
+    createOwner
 }
